--- a/templates/profile.html
+++ b/templates/profile.html
@@ -23,6 +23,10 @@
         <td>Hobbies:</td>
         <td>%hobbies</td>
       </tr>
+      <tr>
+        <td>About Me:</td>
+        <td>%aboutMe</td>
+      </tr>
     </table>
   </center>
 </body>
