--- a/templates/profile.html
+++ b/templates/profile.html
@@ -20,11 +20,11 @@
         <td>%age</td>
       </tr>
       <tr>
-        <td>Hobbies:</td>
+        <td>Hobbies</td>
         <td>%hobbies</td>
       </tr>
       <tr>
-        <td>About Me:</td>
+        <td>About Me</td>
         <td>%aboutMe</td>
       </tr>
     </table>
